# reversi_ai

./: LICENSE
distillation/: .gitignore  pyproject.toml
distillation/src/distillation/: __init__.py  dataset.py  scheduler.py  vs.py
distillation/src/distillation/losses/: mse_ranking.py
distillation/src/distillation/models/: __init__.py  dense.py  dense_v.py  transfomer.py
ga/: hello.py  main.py  pyproject.toml  vs_base.py  vs_piece.py
ga/players/: champion_player.py  matrix_player.py  piece_player.py  tmp_matrix_player.py
ga_rust/: Cargo.toml
ga_rust/src/: evaluator_evaluator.rs  evaluator_pool.rs  genetic_optimizer.rs  main.rs
ga_rust/src/evaluators/: bitmatrix.rs  mod.rs  multi_bitmatrix.rs
ga_rust/src/fitness_calculator/: bitmatrix.rs  mod.rs  simple.rs
ga_rust/src/genetic_evaluators/: bitmatrix.rs  mod.rs  multi_bitmatrix.rs
ga_rust/src/genetic_optimizer/: bitmatrix.rs  mod.rs
gen-kifu/: .gitignore  pyproject.toml
gen-kifu/src/gen_kifu/: __init__.py  egaroucid.py  mcts.py  wtb2h5.py
rl/: .gitignore  README.md  main.py  pyproject.toml
rl/agents/: dense.py  mod.py
rl/memory/: mod.py
rl/models/: dense.py
rl/src/rl/: __init__.py  tune.py
rl/src/rl/agents/: __init__.py  batch_board.py  cnn.py  dense.py  q_net.py
rl/src/rl/agents/net_driver/: __init__.py  cnn.py  dense.py  q_net.py  transformer.py
rl/src/rl/memory/: __init__.py  proportional.py  simple.py
rl/src/rl/models/: cnn.py  cnn_dueling.py  dense.py  resnet.py  transformer.py
rl/src/rl/tuning/: __init__.py  transformer_config.py
rl/tests/: test_sumtree.py
supervised_learning/: .gitignore  pyproject.toml
supervised_learning/src/supervised_learning/: __init__.py  reversi_dataset.py  reversi_trainer.py  vs.py
supervised_learning/src/supervised_learning/losses/: sign_aware.py
supervised_learning/src/supervised_learning/models/: __init__.py  cnn.py  dense.py
