[project]
name = "distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neodymium6", email = "104201402+neodymium6@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.12.1",
    "numpy>=2.2.2",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
]

[project.scripts]
distillation = "distillation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
