[project]
name = "distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "neodymium6", email = "104201402+neodymium6@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.12.1",
    "numpy>=2.2.2",
    "rust-reversi>=1.4.4",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]
distillation = "distillation:main"
export = "distillation:export_student_model"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
