[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.2",
    "rust-reversi>=1.4.1",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
]

[project.scripts]
main = "rl:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
