[project]
name = "rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "rust-reversi>=1.4.4",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
]

[project.scripts]
train = "rl:train"
vs_random = "rl:vs_random"
vs_alpha_beta = "rl:vs_alpha_beta"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
